# hello-ctiny

./: CMakeLists.txt  build.sh  toolchain-attiny85.cmake
src/: main.c
